# log-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENT.project-template.md  Makefile  README.md  pyproject.toml  roomate-wanted.md
.claude/: settings.local.json
.github/workflows/: ci.yml
access_log_analyzer/: __init__.py  analyzer.py  config.py  main.py  models.py  parser.py
static/: style.css
templates/: dashboard.html
tests/: __init__.py  test_analyzer.py  test_config.py  test_main.py  test_parser.py
